assets/css/main.scss
---
---

@import "materialize";
@import "rouge-base16-dark.scss";

/*
 * main and footer fix for mobile screen
 */

main {
  padding-left: 300px;
}

footer {
  padding-left: 300px;
  padding-bottom: 1em;
  padding-top: 1em;
}

@media only screen and (max-width: 992px) {
    main {
      padding-left: 0;
    }

    footer {
      padding-left: 0;
      background-color: #212121;
    }
}

/*
 * unordered list fix
 */

section ul {
  list-style-type: initial ! important;
  padding-left: 40px ! important;

  li {
    list-style-type: initial ! important;
  }
}

.all-post ul {
  list-style-type: none ! important;
  padding-left: 0px ! important;

  li {
    list-style-type: none ! important;
  }
}

/*
 * general font setting
 */

body {
  font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.sidenav li.active {
  background-color: #ffc107;
}

.title {
  font-weight: lighter;
  font-size: 2.8rem;
  text-align: center;
}

.description {
  font-weight: lighter;
  font-size: 1.2rem;
  text-align: center;
}

.credits {
  font-weight: lighter;
  font-size: 0.9rem;
  font-style: italic;
  display: block;
}

.name {
  font-size: 1.3rem;
  padding: 0 32px;
  display: block;
}

.role {
  font-weight: lighter;
  font-size: 0.9rem;
  font-style: italic;
  padding: 0 32px;
  display: block;
}

.social {
  padding: 5px 32px;
  display: block;
}

/*
 * header setting
 */


h1 {
  font-size: 2.2rem;
  font-weight: normal;
}

h2 {
  font-size: 1.8rem;
  font-weight: normal;
}

h3 {
  font-size: 1.5rem;
  font-weight: normal;
}

h4 {
  font-size: 2.2rem;
  font-weight: lighter;
}

h5 {
  font-size: 1.8rem;
  font-weight: lighter;
}

h6 {
  font-size: 1.5rem;
  font-weight: lighter;
}

section img {
  max-width: 100%;
}

blockquote {
  border-left:3px solid #ffcc00;
  margin:0;
  padding:0 0 0 20px;
  font-style:italic;
}

.small-separator {
  text-align: center;
  font-size: 1.8rem;
}

.small-separator::after {
  content: "\2022\0020\2022\0020\2022";
}

/*
 * code css setting
 */

code {
  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
  color:#efefef;
  font-size:13px;
  margin: 0 4px;
  padding: 4px 6px;
  border-radius: 2px;
}

pre {
  padding:8px 15px;
  background: #191919;
  border-radius: 2px;
  border:1px solid #121212;
  box-shadow: inset 0 1px 3px rgba(0,0,0,.3);
  overflow: auto;
  overflow-y: hidden;

  code {
    color: #efefef;
    text-shadow: 0px 1px 0px #000;
    margin: 0;
    padding: 0;
  }
}

